# bool8_t

./: .clang-format  CMakeLists.txt  license.md  readme.md
cmake/: Functions.cmake  bool8_tConfig.cmake.in
doc/: footer.html
examples/: CMakeLists.txt
examples/main/: CMakeLists.txt  main.cpp
include/bool8_t/: bool8_t.hpp
src/bool8_t/: CMakeLists.txt  bool8_t.cpp
